varを使わない記述に周淮英